--- a/src/styles/index2.css
+++ b/src/styles/index2.css
@@ -7,6 +7,8 @@ body{
     background-color: aliceblue;
     align-items: center;
     justify-content: center;
+    /* -webkit-user-select: none; */
+    -webkit-app-region: drag;
 }
 
 #pass-box{
@@ -14,6 +16,7 @@ body{
     box-shadow: 0px 2px 2px 1px rgba(0, 0, 0, 0.12);
     background-color: aquamarine;
     padding: 30px;
+    user-select: none;
 }
 
 h3, h1, h5, h2, h6{
